Reducers added - CSS-Modules added - IndexRoute added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-  <body id="root">
-    MyApp
+
+  <body >
+    <div id="root"></div>
   </body>
-  <script  src="./build.js" />
+  <script  src="./build.js"></script>
+
 </html>
