--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-
+<head>
+  <script type="text/javascript" src="//platform.linkedin.com/in.js">
+      api_key: 811grlmasbvv75
+  </script>
+</head>
   <body >
     <div id="root"></div>
   </body>
