--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
     <div id="root"></div>
   </body>
   <script  src="./build.js"></script>
-
+  <link  rel="stylesheet" type="text/css" href="/stepZilla.css" />
 </html>
