bootstrap css added and used

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   </script>
 </head>
   <body >
-    <div id="root"></div>
+    <div id="root" class="container"></div>
   </body>
   <script  src="./build.js"></script>
   <link  rel="stylesheet" type="text/css" href="/stepZilla.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </html>
