--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   </body>
   <script  src="./build.js"></script>
   <link  rel="stylesheet" type="text/css" href="/stepZilla.css" />
+  <link  rel="stylesheet" type="text/css" href="/node_modules/react-datepicker/dist/react-datepicker.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </html>
