--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
   <script  src="./build.js"></script>
   <link  rel="stylesheet" type="text/css" href="/stepZilla.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </html>
