--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <script type="text/javascript" src="//platform.linkedin.com/in.js">
       api_key: 811grlmasbvv75
   </script>
+  <script>
+  window.onbeforeunload = function() {
+  return "Data will be lost if you leave the page, are you sure?";
+};
+  </script>
 </head>
   <body >
     <div id="root" class="container"></div>
